--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.12.1",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-awesome-lightbox": "^1.8.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2"
