--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.1",
+    "@tailwindcss/forms": "^0.3.3",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-awesome-lightbox": "^1.8.0",
